--- a/lesson6/答题卡.md
+++ b/lesson6/答题卡.md
@@ -11,5 +11,5 @@
  4、pallet-asset缺少权重的设计<br>
 
 #### 二、简单的分析下为什么Polkadot配置的Blance类型是u128，而不是类似以太坊的u256。（注： DOT发行量是1000万个，精度是12位，年增发量是10%）
-1、类型u128完全够用，存储数据长度远远大于总发行量 1000万Dot以及每年10%的增发量而不溢出。<br>
-2、节约链上存储空间，使用u128能比u256少暂用存储空间。<br>
+1、Polkadot的经济模型设计可以得出类型u128完全够用，存储数据长度远远大于总发行量 1000万Dot以及每年10%的增发量而不溢出。而以太坊精度为18位，目前总发行量已经过亿，需要更大的数据类型u256<br>
+2、在满足需求的情况下，Polkadot更节约节约链上存储空间，使用u128能比u256少暂用存储空间。<br>
