--- a/lesson6/答题卡.md
+++ b/lesson6/答题卡.md
@@ -1,9 +1,11 @@
 1. 代码补全
 OK
+![test](test.png)
 
-2. pallet-asset有哪些缺失
-(1) 功能非常简单，只包含如
+1. pallet-asset有哪些缺失
+(1) 功能非常简单
 (2) 无尘埃账户相关限制，长期使用将导致账户数据爆炸
+(3) 不能管理多资产
 
 3. 为什么Polkadot的Balance类型是u128
 注意：DOT发行量是1000万，精度是12位，年增发率是10%
